# new-albums

./: .gitignore  README.md  README.rst  __init__.py  build_description.py  config.py  pyproject.toml  reject_genres.json  requirements.txt  setup.py
classes/: albumClass.py  artistClass.py  playlistClass.py  toolsClass.py  userClass.py
data/: .git_ignore  .gitignore  fiat.py  rejects.json  rejects.py  rejects_example.json  rejects_example.py
new_albums/: .gitignore  __init__.py  __main__.py  _default_fiat.py  accept.txt  accept_reject.py  api.py  build_description.py  config.py  reject.txt
new_albums/classes/: accept_reject.py  albumClass.py  artistClass.py  playlistClass.py  toolsClass.py  userClass.py
new_albums/scripts/: accept_reject.py  api.py  build_description.py  config.py
services/: get_spotify.py
tests/: test_build_description.py  test_get_spotify.py  test_new_albums.py
